--- a/q/275939.html
+++ b/q/275939.html
@@ -43,10 +43,13 @@
 #include &lt;iomanip&gt;
 #include &lt;numeric&gt;
 #include &lt;chrono&gt;
+
 const int ROWS = 6;
 const int COLS = 6;
+
 using Matrix = std::array&lt;std::array&lt;bool, COLS&gt;, ROWS&gt;;
 int count = 0;
+
 // Optimized custom hash function for std::unordered_set of matrices
 struct MatrixHash {
     size_t operator()(const Matrix&amp; m) const {
@@ -62,13 +65,7 @@ struct MatrixHash {
     }
 };
 
-void found_permutations(
-    Matrix&amp; m,
-    const std::array&lt;uint32_t, ROWS&gt;&amp; row_sums,
-    uint32_t i,
-    bool permuted,
-    std::unordered_set&lt;Matrix, MatrixHash&gt;&amp; found
-) {
+void found_permutations(Matrix&amp; m, const std::array&lt;uint32_t, ROWS&gt;&amp; row_sums, uint32_t i, bool permuted, std::unordered_set&lt;Matrix, MatrixHash&gt;&amp; found) {
     if (i == ROWS) {
         if (permuted) {
             // transpose
@@ -113,18 +110,9 @@ void found_permutations(
 }
 
 // Search function
-void search(
-    Matrix&amp; m,
-    uint32_t i,
-    uint32_t j,
-    uint32_t row_sum,
-    uint32_t min_row_sum,
-    bool equal_row,
-    std::array&lt;bool, COLS&gt;&amp; equal_cols,
-    std::unordered_set&lt;Matrix, MatrixHash&gt;&amp; found,
-    std::string&amp; out
-) {
-    if (row_sum + COLS - j &lt; min_row_sum) return;
+void search(Matrix&amp; m, uint32_t i, uint32_t j, uint32_t row_sum, uint32_t min_row_sum, bool equal_row, std::array&lt;bool, COLS&gt;&amp; equal_cols, std::unordered_set&lt;Matrix, MatrixHash&gt;&amp; found, std::string&amp; out) {
+    if (row_sum + COLS - j &lt; min_row_sum)
+        return;
 
     if (j == COLS) {
         ++i;
@@ -136,7 +124,7 @@ void search(
                 }
                 found_permutations(m, row_sums, 0, false, found);
                 ++count;
-               &#32;
+
                 for (const auto&amp; row : m) {
                     for (bool cell : row) {
                         out += cell ? '1' : '0';
@@ -185,17 +173,14 @@ int main() {
 
     auto end = std::chrono::steady_clock::now();
     std::chrono::duration&lt;double&gt; elapsed = end - start;
-   &#32;
-    std::cerr &lt;&lt; "Count: " &lt;&lt; count &lt;&lt; '\n';
-    std::cerr &lt;&lt; "Elapsed time: " &lt;&lt; elapsed.count() &lt;&lt; " seconds" &lt;&lt; '\n';
 
-    std::cout &lt;&lt; out;
-   &#32;
+    std::cout &lt;&lt; &quot;Count: &quot; &lt;&lt; count &lt;&lt; '\n';
+    std::cout &lt;&lt; &quot;Elapsed time: &quot; &lt;&lt; elapsed.count() &lt;&lt; &quot; seconds&quot; &lt;&lt; '\n';
+
+    // std::cout &lt;&lt; out;
 }
-
-
 </code></pre>
-<p><a href="https://tio.run/##nVdNb@M2EL3rVzApYEuwk7UdYBdr2e5hUWAPXQToHnpIXUOR6IReUXRJKtmP@K/XHX5IpGTZdVYIYnHIeRw@zjxS6XZ79ZCm@/0vpEjzMsNoRpiQHCd0EThbWTCeYY6zlcDS73jCqWTctyT5A@NEPjb8E86Tb75Bltsc@wbCaFKQrW8qSoo5SX1T@shZwRZBygohESkk@uP2z89ojt7Gnu3D7e/WVgpSPKBPieTkK1iEzKZTHcvMe71nLB9qp8VQ4y3iQMGkrIT/czSKgzdv0O1WEkq@4wylpZCMosdEPKJ1WaSSsAKtGTfwDaoQWyOqZk@xCIDWMpU2mo/K@0eA4BGAuoKhW8wTIDOMQrMUM7CHaISMwQz3XHQIOsCqQ4Vh3ZNSsh7i7BlNFYRz9gCg9@MBRo2jiEEpznNAgJFtDPU4gLB6nc3QOEIv2rEJumu0dPB/z2uIARp9fY9v3r17f/8eGuGjBXsb1a3FAk0ih@nwOJYlLzSk6d4FuzgInhjJYCllka2AXFrKRO2VCPWQmt6hbhrSvLQoIQduJitpc0JTuRIlFWZ81Y2IaWuyzCw4M6bDfJiZSYdeEgCwjjCo6CVrFBI0n@tpfc5VRzVBey8gQSVPCrFlAjc6bO5T@WPXscMqzTd69@FnpmsgRoPBpmurtYPNG2J8CPioKJUP6fJRD5V3m@UdWYILhR9oxAfjdq08aeaqolEwLkMqr@/xAynCaAiw17jIwiiKX0nEWUxUq3oNExV7J5jwqJA/xYXKAc0HEStFCc6AlAYrlpYhulu2hWA8RC3LpCtU1Ysg0ce1YqZpScs8kVgV@djNplt2ulEZxUehJt1QkwbU5CSULXGNIgkOVYAmggi4980Tg9aBsYu6txPK75oUAusUk9Ex1doF7j/OBfawOkSGDp1iQH4MEIRb64NxiFrCXeWUYl57xOrdq7FxO36VD9Usd2S8RBdz5NrLruXew@H@5ZQwK0xagdEjKKYon5OtGrocIu3QQfmZxMDRiA9Jec1kh9sEpQNq8BknPHUHtTkThDZ2ngNtXa/bm1bbrqFlpaRYNXr0uYD/KZNc2b2D4eDy0bPDUpaLnzhAPBe4acC9p4dYKRvHig0MKNdXpCstdV7Eka2yOKhdNuokUqP9JIBMjBvHUud5VXWa@loTKG6YAQYag1HvY6nVeQbXedOW8HYFcaPK3KsdfkyV63Lhyw6VomD25FW1TqnU7tUFMIK0T0BMjmf/YKBvoocd3RSccft77S2veiCf0GBuBv@K@uM@uPRH/bjTYRecgOij/jnkVaP/KvqnFKvK2sPeTfNq6@U6qoXSdbsuz6euXTArmaoumO3qhrKFEa6E9eFe19GFG/Tygi7MTQgqcNxQV3tBAhydE@0gLKw/Der1GmjOxWocJBsZAg9aZitlahABt2u3RoADNA0FM0GaN7ouvL6hL1dWgtSGRQ2C3IocdycXc7CWE@swDV9y0bGV/E@0R0OK7THyKSGFO0TUbZEmShPs5pmLjky4rDTEfKoqLcZJ9m2V5iz9Mp0W7DmMbFp0nwJeKJXKOQuoaJ6HisnDuEde2gT@jbeCOe80Mdz4IZrTRJFlcODlmmO4LT3hcDwe6adeU71ZI@/PCtzRHXAUgraeRWAdXDUqK7lW11nGyvscA415shVYoSnMK7M5xtHzxpyrb8zLD0php@hSNcx3P7w42WkO/s1CS0Kx9bGzXWtfyAo1DMgALc7EpcMK7CeKwVPqBl01sSrV9vt/03WePIj91e3N/ooqOucFLO0J/wc" rel="nofollow noreferrer" title="C++ (gcc) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##nVdNb@M2EL3rVzApYEuwkrUdYBexbPewKLCHLgJ0Dz2kriFLdEKvJLoklex2o79ed/ghkbJl164QxOKQ8zh8nHmkku325ilJdrufSJFkZYrRlFAuGI7zuWdtZUFZihlOlxwLt@MFJ4Iy1xJnT5QR8dzyjxmLv7sGUW4z7BoIzeOCbF1TUeaYkcQ1Jc@MFnTueQktuECkEOi3h9@/oBl6Hzm2jw@/GptXclI8oc@xYOQbmLhIJxMVzdR5XVGahcprHirAeeRJnISW8H@GhgD07h162AqSk79xipKSC5qj55g/o3VZJILQAq0p0/gtthBdo1xOn2DuAbNlIkw4n6T3Dw/BwwF1CUO3mMXApx/4ejF6YA/lAdIGPdxxUSGoCOsOGYZxj0tBe4jRVzSRENbZAYDeTwcYDY5kBiU4ywABRu5jyMcC@PXrdIpGAXpTjm3QqtVSwf85ayAGaPjtHt99@HC/uoeG/2zA3gdNaz5H48BiWjyGRckKBam7K6@CbXuhJIWllEW6BHLzUsRyr7jfMBsaZp10KGHv78ZLYXJBMbjkZc5DVHchEiLFjQbFadix9VM9SejsN4CpYGoiyRr5BM1maiaXXdlRY@@zDqkoWFzwLeW41WHSPBc/qo69lBm9UfsMP1OV7hEaDDZdm6ocTIYQ7UPAR0YpfUiXj3xy8bhZPJIFuOTwA43oYFy1lxHtrJQscsqEn4vbFX4ihR@EAHuLi9QPguhCIs5iol7VJUzU7J1gwqFC/C8uZA4oPghfSkpwCqS0WDG0hOhxsV/yozqxG8u4K1TZiyC3R404JkmZl1kssCznkZ1Ntcx0wzKIjkKNu6HGLajxSShTzApFEOzLAHUEAXDvmscarQOjCrq3E6rvlhQcqxQTwTF9qjz7H2ccO1gdcpKHjkgQUCsI10qDLvk9ia5zSjKvPCL57tTYaD9@mQ/1LI9ktEBXM2Tbi67lruAk/3pKgiVmXoPlR1B0Ub7GWzl0ESLl0EH5mcTAIYgPSblkssNtqtQJ/QXHLLFHslZ/royu4rsq3rxvnHcTsmPJSbFsrEr58V9lnElbiLqvEj0zJKEZv/B4MMPhugC3lx6ipXAPDBMHkKkuOjdKxJwAg71DMfIa1408a6SXu82Qa1Hr4Ok8kepOXUFrAuULdwoYqA1an48lT@fB2mTGvkjv1wjTusuc6mDHdLcpCLbo0KEczI6AytYpHaouTvEhJHYMcnE8vwcDda2MvO4ln3Fzu/SGVj@QRmgw04N/Rv1RH1z6w37U6VB5JyD6qH8OWfXoP4r@KQ2qs/Swd9O@ljo5jhrps922y/FpyhTMUnjqy6H6cQoZqhRG2IpVx3VTN1d20NsbutJ3G6i8UUsvzZUHcFQO7AdhYN1pUK/XQrMuRrUguUCkNlo4GwFyiYCbsV0jwAGagoKZIK1bXVdOX9hSJ6M6UmhaBNkVWe5OLuZgLSfWoRstZT22kv@I9mhIkTkYPseksMeCvP/lsdQAs3n66iJiJmrN0F@aUoJxnH5fJhlNvk4mBX31A5MW3aLvhFKrmrWAamaZL5k8jHvopI3n3mFrmPMOEM2NG6I@RCRZGgdebhmG@88L9kejoXqaNTWbNXT@jKAd3QFLIWjpWQQ2wdWj0pIpNZ2mtFxlGGjM4i3HEk1i3ujNcZeVSHGBb8Prj1JNJ@haNvQHO7xYyWkP/sXAwoc8Nj5mplvlCxkhhwERoMMpv7ZYnvngaOEpUqvd7p9kncVPfHfzcLe7ySWHswLW84L/BQ" rel="nofollow noreferrer" title="C++ (gcc) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.12/" rel="nofollow noreferrer">Python 3.12</a>, 10.33 s unofficial time</h1>
 <p>Python port of <a href="https://codegolf.stackexchange.com/a/275941/110802">@Ander Kaseorg's Rust code</a>.</p>
