--- a/q/247835.html
+++ b/q/247835.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>047</td><td>Python 3.8 prerelease</td><td>241007T215348Z</td><td><a href="https://codegolf.stackexchange.com/questions/247835/previous-fibonacci-number/275958#275958">aeh5040</a></td></tr>
+<tr d-ix="0"><td>046</td><td>Python 3.8 prerelease</td><td>241007T215348Z</td><td><a href="https://codegolf.stackexchange.com/questions/247835/previous-fibonacci-number/275958#275958">aeh5040</a></td></tr>
 <tr d-ix="1"><td>012</td><td>x8664 assembly</td><td>220526T030603Z</td><td><a href="https://codegolf.stackexchange.com/questions/247835/previous-fibonacci-number/247858#247858">Chris</a></td></tr>
 <tr d-ix="2"><td>024</td><td>C gcc</td><td>230715T183638Z</td><td><a href="https://codegolf.stackexchange.com/questions/247835/previous-fibonacci-number/262886#262886">Hunaphu</a></td></tr>
 <tr d-ix="3"><td>010</td><td>x8664 machine code</td><td>230716T012439Z</td><td><a href="https://codegolf.stackexchange.com/questions/247835/previous-fibonacci-number/262896#262896">engineer</a></td></tr>
@@ -78,12 +78,12 @@
 <tr d-ix="49"><td>032</td><td>JavaScript</td><td>220525T200912Z</td><td><a href="https://codegolf.stackexchange.com/questions/247835/previous-fibonacci-number/247836#247836">rydwolf</a></td></tr>
 <tr d-ix="50"><td>nan</td><td></td><td>220525T202325Z</td><td><a href="https://codegolf.stackexchange.com/questions/247835/previous-fibonacci-number/247838#247838">Giuseppe</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 47 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 46 bytes</h1>
 <p>A different method.  Not practical for large values without caching.</p>
 
-<pre class="lang-none prettyprint-override"><code>g=lambda n:n and(n&gt;(a:=g(n-1))+g(a)and~-n or a)
+<pre class="lang-none prettyprint-override"><code>g=lambda n:n and(g(a:=g(n-1))&lt;n-a and~-n or a)
 </code></pre>
-<p><a href="https://tio.run/##FcixCoAgEADQva9wvKMaTAIR7F8uhCuoU8SlpV@/cnnDK087sjhfqirHi@49kZEghiSBbEAhMshsEUcGwn/fWUyuhlBLPaUBw4ITg@usHd@xDnFQ/QA" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##FcqxCoAgEIDhvae40YMcTAKRfJgLwYI6RVxaevWrW77h52/POCr70LpISRfdeybgyECcTTEUUzFsHeLGljS@lqF2IJTWTx7/s@BcjFdWJSjOI04iHw" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1>x86-64 assembly, <s>13</s> 12 bytes</h1>
 <pre><code>6a 01 58 99 92 01 c2 39 fa 75 f9 c3
