--- a/q/166999.html
+++ b/q/166999.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>028</td><td>Ruby</td><td>180618T112429Z</td><td><a href="https://codegolf.stackexchange.com/questions/166999/execute-a-superb-shuffle/167002#167002">G B</a></td></tr>
+<tr d-ix="0"><td>026</td><td>Ruby</td><td>180618T112429Z</td><td><a href="https://codegolf.stackexchange.com/questions/166999/execute-a-superb-shuffle/167002#167002">G B</a></td></tr>
 <tr d-ix="1"><td>3026</td><td>PowerShell 3.0</td><td>180618T224748Z</td><td><a href="https://codegolf.stackexchange.com/questions/166999/execute-a-superb-shuffle/167045#167045">Veskah</a></td></tr>
 <tr d-ix="2"><td>044</td><td>Red</td><td>180619T075255Z</td><td><a href="https://codegolf.stackexchange.com/questions/166999/execute-a-superb-shuffle/167058#167058">Galen Iv</a></td></tr>
 <tr d-ix="3"><td>018</td><td>Perl 6</td><td>180618T122300Z</td><td><a href="https://codegolf.stackexchange.com/questions/166999/execute-a-superb-shuffle/167009#167009">Jo King</a></td></tr>
@@ -40,12 +40,12 @@
 <tr d-ix="11"><td>008</td><td>Charcoal</td><td>180618T122422Z</td><td><a href="https://codegolf.stackexchange.com/questions/166999/execute-a-superb-shuffle/167010#167010">Neil</a></td></tr>
 <tr d-ix="12"><td>065</td><td>Java 10</td><td>180618T114855Z</td><td><a href="https://codegolf.stackexchange.com/questions/166999/execute-a-superb-shuffle/167003#167003">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 28 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>28</s> 26 bytes</h1>
 
-<pre class="lang-none prettyprint-override"><code>-&gt;x{x.map{x.rotate!(17)[0]}}
+<pre class="lang-none prettyprint-override"><code>-&gt;x{x.map{x[($.+=17)%54]}}
 </code></pre>
-<p><a href="https://tio.run/##NcwxC4JAAIbh3V9xORVUaKd351AQOsjdJI3iYJBbJGJghL/d7LWW5xs@eLvn9TU1x2l3Gt7D/l63s92jr/vbah3qTRlU4zi1oilLTwj/fPG3wj@gxAhjVKjRYIJhwFgs0M0SzAiixAhjVKjRYJItQcZige4rxZwiSowwRoUaDSb5UmQsFujyfzGliBIjjFGhRoNJuhQZiwW69Fe0PL5XVdMH" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
-<p>Today I decided to have a look at this problem again, and I could shave 3 bytes from the previous solution (reported below).</p>
+<p><a href="https://tio.run/##Ncw9C4JQAIXh3V9xkYKiksz7ORiEDXKdLo3iUINbIEFgiL/d6rWW5wwH3sfz9prafNod@6FP7tdu6OvVItnkqVkvlWzGcepEW9eREPHpEm9FfMAMJSrUaNCiw3TPeAxYfSR4JogZSlSo0aBFd56DjMeA1VeKJUXMUKJCjQYtunIuMh4DVuW/WFDEDCUq1GjQoivmIuMxYFX8ip4njppmegM" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
+<p>Today I decided to have a look at this problem again, and I could shave <s>3</s> 5 bytes from the previous solution (reported below).</p>
 <h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 31 bytes</h1>
 
 <pre class="lang-none prettyprint-override"><code>-&gt;x{(0..53).map{|r|x[r*17%54]}}
