--- a/q/247835.html
+++ b/q/247835.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>008</td><td>Uiua</td><td>241008T014226Z</td><td><a href="https://codegolf.stackexchange.com/questions/247835/previous-fibonacci-number/275960#275960">noodle p</a></td></tr>
-<tr d-ix="1"><td>041</td><td>Python 3.8 prerelease</td><td>241007T215348Z</td><td><a href="https://codegolf.stackexchange.com/questions/247835/previous-fibonacci-number/275958#275958">aeh5040</a></td></tr>
+<tr d-ix="0"><td>041</td><td>Python 3.8 prerelease</td><td>241007T215348Z</td><td><a href="https://codegolf.stackexchange.com/questions/247835/previous-fibonacci-number/275958#275958">aeh5040</a></td></tr>
+<tr d-ix="1"><td>008</td><td>Uiua</td><td>241008T014226Z</td><td><a href="https://codegolf.stackexchange.com/questions/247835/previous-fibonacci-number/275960#275960">noodle p</a></td></tr>
 <tr d-ix="2"><td>012</td><td>x8664 assembly</td><td>220526T030603Z</td><td><a href="https://codegolf.stackexchange.com/questions/247835/previous-fibonacci-number/247858#247858">Chris</a></td></tr>
 <tr d-ix="3"><td>024</td><td>C gcc</td><td>230715T183638Z</td><td><a href="https://codegolf.stackexchange.com/questions/247835/previous-fibonacci-number/262886#262886">Hunaphu</a></td></tr>
 <tr d-ix="4"><td>010</td><td>x8664 machine code</td><td>230716T012439Z</td><td><a href="https://codegolf.stackexchange.com/questions/247835/previous-fibonacci-number/262896#262896">engineer</a></td></tr>
@@ -79,17 +79,17 @@
 <tr d-ix="50"><td>032</td><td>JavaScript</td><td>220525T200912Z</td><td><a href="https://codegolf.stackexchange.com/questions/247835/previous-fibonacci-number/247836#247836">rydwolf</a></td></tr>
 <tr d-ix="51"><td>nan</td><td></td><td>220525T202325Z</td><td><a href="https://codegolf.stackexchange.com/questions/247835/previous-fibonacci-number/247838#247838">Giuseppe</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Uiua, 8 bytes</h1>
-<pre><code>⁅÷÷2+1√5
-</code></pre>
-<p>Try it: <a href="https://uiua.org/pad?src=0_13_0-dev_3__RiDihpAg4oGFw7fDtzIrMeKImjUK4qyaQCDiiaEkIl8g4oaSIF8i4qyaQFxzwrDii5Xin5xGIFsyIDMgNSA4IDEzIDIxIDM0IDU1IDg5IDE0NF0K" rel="nofollow noreferrer">Uiua pad</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 41 bytes</h1>
-<p>A different method.  Impractically slow for large values without caching.</p>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 41 bytes</h1>
+<p>A different method.  Impractically slow for large values without caching. For n between two Fibonaccis it returns the lower one.</p>
 
 <pre class="lang-none prettyprint-override"><code>g=lambda n:n and[a:=g(n-1),n-1][g(a)+a&lt;n]
 </code></pre>
 <p><a href="https://tio.run/##FcQxCoAwDADA3Vd0TFCHWgQp@pLSIVKIgsZSuvj6aG@4/NbjEbfkosrbRfeeyIgXQ5IC@Y1BRovDXwwMhD2tEjWXUyowTDgwuNbcWlrWIXaqHw" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1>Uiua, 8 bytes</h1>
+<pre><code>⁅÷÷2+1√5
+</code></pre>
+<p>Try it: <a href="https://uiua.org/pad?src=0_13_0-dev_3__RiDihpAg4oGFw7fDtzIrMeKImjUK4qyaQCDiiaEkIl8g4oaSIF8i4qyaQFxzwrDii5Xin5xGIFsyIDMgNSA4IDEzIDIxIDM0IDU1IDg5IDE0NF0K" rel="nofollow noreferrer">Uiua pad</a></p>
 </div>
 <div id="pu2" class="pu"><h1>x86-64 assembly, <s>13</s> 12 bytes</h1>
 <pre><code>6a 01 58 99 92 01 c2 39 fa 75 f9 c3
