--- a/q/59347.html
+++ b/q/59347.html
@@ -606,9 +606,9 @@
 </code></pre>
 <p><a href="https://tio.run/##fZJBT4MwGIbv/Iru80LFRabRA@S7meguxoM3xIS1XSCSrmHMhT/g3fgP/SNYYGXd1nlpSL/nfd/2Laqp85W8bds6UwKTML28ubuP2YoLBIC5R/UaM4VhzLuF6V1PVYWsfXiTi6YWawLBuq78Uki/k1F6JSTXGPW2eVEK/7XaCBp5hBTLHkiYShFhDjTqMhOu0gBnei7KQ@LBIqZO4l0TXLnVn/3MrXvRs@ESLK98k7E/@KAgluIZdgID/8MimGMHsxSNwAEG2hT3aGDQ2Hygii2n0GFxAV2zhPRVj4MJ6seBiFnV2CK6E@lSTNIEQzps7rz8Qy@qzaZOs@szZufCf7@@RwVh2t00C6zMtiSrRMYbwsWykIIDjRd646PnGZ4WFDoTfqwEPE7YSJf56MiGf/zU9gkigx@PHruu7ZfuL9@2fw" rel="nofollow noreferrer">Try it online!</a></p>
 <h1>Same thing but with the <code>G</code> command</h1>
-<pre><code>IDG
+<pre><code>I G
 </code></pre>
-<p><a href="https://tio.run/##fZKxTsMwFEX3fIX7WGJCRQqCIdHbKpUuiIGtBCm1XSUicq00pcoPsCP@kB8JTlKnbuuyWJHfuffa11F1la3lfdNUqRK4CJPru4fHmK25QACYT2d6jZnCMObtwvSup8pcVj68yWVdiQ2BYFOVfiGk38oovRGSa4x6uywvhP9abgWNPELyVQcsmEoQYQ40ajMXXCUBTvRcFMfE1CLGTuJdE1y51Z/dzK170bP@EiwrfZNxOHivIJbiGfYCA//DIphjB5MEjcABBtoUD2hg0Nh8oIotp9BhcQVts4R0VQ@DEerHgYhZ1dgiuhfpUkzSCEPab@69/GMvqs3GTrPbC2aXwn@/vgcFYdrdNAusSHckLUXKa8LFKpeCA42XeuOj4xmeFxQ6E36sBDxN2EqX@eDI@n/83PYJIoOfjmZt1/ZLd5dvmj8" rel="nofollow noreferrer">Try it online</a></p>
+<p><a href="https://tio.run/##fZKxTsMwEIb3PoU5FptQkYJgiHVMSKULYmArQUptV42IXCtNqfoC7Ig35EWCk8bBbV0yWNHd/393@WOzrRZLfVPXVWYUTuP04vr2joulVAgAEzK2JxcGYy6bQ9jqwJS5rijMtpVaEYhWVUkLpWljYowNNou8UPSlXCuWDAjJ521nKkyKCBNgSTNqKk0a4cj2VbGvePAUw6DizSqkCbs/2l7Y92x7u93FoqRuBrtUWtrPYp2DeI4n6AxO/I8Wwa0djVJ0hoAwslD8k0ZOyt0LGu6R4gDiHJpkCWmj7htnCK8aEuFF45tYZ7KhuElnGLNdsWPRfRazsGEQdnUCdmr4z@dX7yDC0l2yIIpsQ7JSZXJLpJrnWklgfGYL761e4HFAcXDCtzcBDyesdQjeE8Xuah9jHyFx8sPWGFx2tu5I97HNwP/9zaOKlTqJ4f3FSbHZN9dmXVHW3LE2zbqOfwE" rel="nofollow noreferrer">Try it online</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://esolangs.org/wiki/Qdeql" rel="nofollow noreferrer">Qdeql</a>, 8 bytes</h1>
 <pre><code>-\=\/\//
