--- a/q/139355.html
+++ b/q/139355.html
@@ -39,7 +39,7 @@
 <tr d-ix="10"><td>194</td><td>Python 2</td><td>171025T111027Z</td><td><a href="https://codegolf.stackexchange.com/questions/139355/golf-a-number-bigger-than-tree3/146279#146279">Deedlit</a></td></tr>
 </table>
 <div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, H<sub>PTO(Z<sub>2</sub>)</sub>(1000), 480 bytes</h1>
-<p>Since lim(BMS)[1000]/480 is still way greater than lim(BMS)[32]/39, I decided to implement Pointer Matrix System, a version of BMS that I understand better than Flattened AMS.</p>
+<p>lim(BMS)[1000]&gt;lim(BMS)[32]</p>
 
 <pre class="lang-none prettyprint-override"><code>let b=(e)=&gt;{return e[e.length-1].every(it=&gt;!it)};let a=(s,i)=&gt;{let lnz=s.at(-1).findLastIndex(it=&gt;!!it);let r = s.length-s.at(-1)[lnz]-1;let j=s.at(-1);s[s.length-1]=s.at(-1).map((it,id)=&gt;id&lt;lnz?it:!s[r][id]?0:s[r][id]+s.at(-1)[lnz]);let b=s.slice(r+1);for(var h=0;h&lt;i;h++){b=b.map((it,id)=&gt;it.map(it2=&gt;it2&lt;=id+1?it2:it2+j[lnz]));s.push(...b);}return s};s=[Array(1000).fill(0),Array(1000).fill(1)];i=1000;while(s.length){b(s)?(()=&gt;{s=s.slice(0,-1);i++})():s=a(s,i)};console.log(i)
 </code></pre>
