--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20241008T181535Z
+"   /golfscore                                      20241008T195211Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/275970.html">Shortest realisation of n+C(n)                  : 0275970</a>
 <a href="q/139355.html">Golf a number bigger than TREE(3)               : 0139355</a>
 <a href="q/272425.html">Fixed Repeating Output                          : 0272425</a>
 <a href="q/59347.html">Shortest infinite loop producing no output      : 0059347</a>
