--- a/q/275906.html
+++ b/q/275906.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>102</td><td>APL+WIN</td><td>241008T113824Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275966#275966">Graham</a></td></tr>
-<tr d-ix="1"><td>019</td><td>Uiua</td><td>241006T163537Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275953#275953">nyxbird</a></td></tr>
+<tr d-ix="0"><td>017</td><td>Uiua</td><td>241006T163537Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275953#275953">nyxbird</a></td></tr>
+<tr d-ix="1"><td>102</td><td>APL+WIN</td><td>241008T113824Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275966#275966">Graham</a></td></tr>
 <tr d-ix="2"><td>264</td><td>C GCC</td><td>241006T144340Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275952#275952">matteo_c</a></td></tr>
 <tr d-ix="3"><td>067</td><td>Wolfram Language Mathematica</td><td>241006T113858Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275950#275950">att</a></td></tr>
 <tr d-ix="4"><td>142</td><td>Python 3</td><td>241003T121136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275918#275918">Jitse</a></td></tr>
@@ -38,23 +38,22 @@
 <tr d-ix="9"><td>017</td><td>Jelly</td><td>241003T150222Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275921#275921">Unrelate</a></td></tr>
 <tr d-ix="10"><td>003</td><td>05AB1E</td><td>241003T095245Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275916#275916">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>APL+WIN, 102 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, <strike>19</strike> 17 bytes</h1>
+<pre><code>⬚@ ˘⊡∩▽’⍜⇌◰.\+⊂⊸⧻
+</code></pre>
+<pre><code>                ⊂⊸⧻  # prepend (length, length)
+              \+      # cumulative sum coordinates
+         ⍜⇌◰.        # mask the last occurrences of each coordinate
+      ∩▽’             # keep the coordinates and characters with the mask
+⬚@ ˘⊡                # create an array with the characters at the specified coordinates
+</code></pre>
+<p>Has a lot of leading whitespace (see bash answer). You can use <a href="https://www.uiua.org/pad?src=0_13_0-dev_2__IyBFeHBlcmltZW50YWwhCmYg4oaQIOKsmkAgy5jiiqEtwqTiirgv4oanK-KKuOKnu-KIqeKWveKAmeKNnOKHjOKXsC5cK-KKgjAKZiBbwq8xXzAgMF8xIDFfwq8xIDBfwq8xXSAiYWJjZGUiCmYgW8KvMV8xIMKvMV8xIMKvMV8xIMKvMV8xXSAiYWFhYWEiCmYgWywsLCwsLDBfMSAxXzBdICJzdGFpcmNhc2UiCmYgWy4uLi4uwq8xXzFdICJzIHMgcyBzIgpmIFsuLi4wXzEgLsKvMV8wIC4wX8KvMSAuMV8wXSAib3ZlcndyaXRpbmciCiIrLS0rfCsvKy0tK3xYLystLVgvK3wiCmYgWy4uMF8xIC4xXzAgLjFfwq8xIC4uMF_CrzEgLsKvMV8wIMKvMV8xIDFfwq8xIC4uMF8xIMKvMV8xIDFfwq8xIDFfMF0K" rel="nofollow noreferrer"><code>⬚@ ˘⊡-¤⊸/↧+⊸⧻∩▽’⍜⇌◰.\+⊂0</code></a> to remove it for +4 bytes.</p>
+</div>
+<div id="pu1" class="pu"><h1>APL+WIN, 102 bytes</h1>
 <p>Prompts for string followed by a vector of dx and then dy:</p>
 <pre><code>s←⎕⋄x←(1+|⌊/x)+x←+\0,⎕⋄y←(1+|⌊/y)+y←+\y←0,⎕⋄m←((⌈/y),⌈/x)⍴' '⋄i←1⋄⍎∊(⍴x)⍴⊂'m[y[i];x[i]]←s[i]⋄i←i+1⋄'⋄m
 </code></pre>
 <p><a href="https://tio.run/##fU9BTsMwELz7FeaURG5URxx5ARKIK1LpwQptZClpqjiCRMoJIYhCW3HhHVx4AU/xR8KumxAHhdry7npnxzMW29i/L0WcRn4YC6Vk2OrDx/WVfnk/J1Bd3kAVEF2/rlsFJbT023MBlRuwSu@aeeExvLI7PjuCpQWWHisNiLEfSHDA1bsa4BmmwtP7L4c6gEmUg6z3B103LvQNqJsnJ1mUC7m8KCAsYUpB7giSIQXpSQtOSbsmjsDlkICaTb4/A2odAhNpmIso3Zz1Q3w0gJlTC0GKyoXMQqFWyOHUOmR0o8dpavaviSkjI0MPq@wxk7ncRAOHW7640eF/e@Zd4DPfZxWbm3SLCUI1/I5P6XZ8rPptup2O7WLMt3udvtrKTMTT0SGDYECnPvffGRtBKT7xgeCE1ZMvkx8" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 19 bytes</h1>
-<pre><code>⬚@ ˘⊡+⊸⧻∩▽’⍜⇌◰.\+⊂0
-</code></pre>
-<p><a href="https://www.uiua.org/pad?src=0_13_0-dev_2__IyBFeHBlcmltZW50YWwhCmYg4oaQIOKsmkAgy5jiiqEr4oq44qe74oip4pa94oCZ4o2c4oeM4pewLlwr4oqCMApmIFvCrzFfMCAwXzEgMV_CrzEgMF_CrzFdICJhYmNkZSIKZiBbwq8xXzEgwq8xXzEgwq8xXzEgwq8xXzFdICJhYWFhYSIKZiBbLCwsLCwsMF8xIDFfMF0gInN0YWlyY2FzZSIKZiBbLi4uLi7CrzFfMV0gInMgcyBzIHMiCmYgWy4uLjBfMSAuwq8xXzAgLjBfwq8xIC4xXzBdICJvdmVyd3JpdGluZyIKIistLSt8Ky8rLS0rfFgvKy0tWC8rfCIKZiBbLi4wXzEgLjFfMCAuMV_CrzEgLi4wX8KvMSAuwq8xXzAgwq8xXzEgMV_CrzEgLi4wXzEgwq8xXzEgMV_CrzEgMV8wXQo=" rel="nofollow noreferrer">Try it!</a></p>
-<pre><code>                  \+⊂0 # cumulative sum coordinates, staring from 0,0
-             ⍜⇌◰.     # mask the last occurrences of each coordinate
-          ∩▽’          # keep the coordinates and characters with the mask
-      +⊸⧻             # add the length to each coordinate (see bash answer) 
-⬚@ ˘⊡                 # create an array with the characters at the specified coordinates
-</code></pre>
-<p>Has a lot of leading whitespace (see bash answer). You can replace <code>+⊸⧻</code> with <a href="https://www.uiua.org/pad?src=0_13_0-dev_2__IyBFeHBlcmltZW50YWwhCmYg4oaQIOKsmkAgy5jiiqEtwqTiirgv4oanK-KKuOKnu-KIqeKWveKAmeKNnOKHjOKXsC5cK-KKgjAKZiBbwq8xXzAgMF8xIDFfwq8xIDBfwq8xXSAiYWJjZGUiCmYgW8KvMV8xIMKvMV8xIMKvMV8xIMKvMV8xXSAiYWFhYWEiCmYgWywsLCwsLDBfMSAxXzBdICJzdGFpcmNhc2UiCmYgWy4uLi4uwq8xXzFdICJzIHMgcyBzIgpmIFsuLi4wXzEgLsKvMV8wIC4wX8KvMSAuMV8wXSAib3ZlcndyaXRpbmciCiIrLS0rfCsvKy0tK3xYLystLVgvK3wiCmYgWy4uMF8xIC4xXzAgLjFfwq8xIC4uMF_CrzEgLsKvMV8wIMKvMV8xIDFfwq8xIC4uMF8xIMKvMV8xIDFfwq8xIDFfMF0K" rel="nofollow noreferrer"><code>-¤⊸/↧</code></a> (subtract by minimum of columns) to remove it for +2 bytes.</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://gcc.gnu.org" rel="nofollow noreferrer">C (GCC)</a>, 264 bytes</h1>
 <pre class="lang-c prettyprint-override"><code>x;y;a;z;b;w;main(n,v)char**v;{for(v++[3]=calloc(4*n,n=strlen(v[1]));v[2][x+n+(y+n)*n]=*v[1]++;++*v)a=x&lt;a?x:a,b=x&gt;b?x:b,w=y&lt;w?y:w,z=y&gt;z?y:z,x-=**v%4?(**v&amp;4)/2-1:0,y-=(**v-=2)%4?(**v&amp;4)-2:0;for(y=w;y&lt;=z;y+=2)for(x=a;x&lt;=b+1;++x)putchar(x&gt;b?10:v[2][n+(y+n)*n+x]?:32);}
