--- a/q/275970.html
+++ b/q/275970.html
@@ -26,9 +26,16 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>005</td><td>Uiua</td><td>241008T195211Z</td><td><a href="https://codegolf.stackexchange.com/questions/275970/shortest-realisation-of-ncn/275972#275972">nyxbird</a></td></tr>
+<tr d-ix="0"><td>028</td><td>Python 3</td><td>241008T204519Z</td><td><a href="https://codegolf.stackexchange.com/questions/275970/shortest-realisation-of-ncn/275975#275975">jdt</a></td></tr>
+<tr d-ix="1"><td>005</td><td>Uiua</td><td>241008T195211Z</td><td><a href="https://codegolf.stackexchange.com/questions/275970/shortest-realisation-of-ncn/275972#275972">nyxbird</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 5 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 28 bytes</h1>
+
+<pre class="lang-none prettyprint-override"><code>lambda n:bin(n).count('1')+n
+</code></pre>
+<p><a href="https://tio.run/##K6gsycjPM/6fZhvzPycxNyklUSHPKikzTyNPUy85vzSvREPdUF1TO@9/QVEmkJOmYaapaf0fAA" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 5 bytes</h1>
 <pre><code>+/+⊸⋯
 </code></pre>
 <p><a href="https://www.uiua.org/pad?src=0_13_0-dev_3__ZiDihpAgKy8r4oq44ouvCuKJoSjiip_in5xmKeKHoTEyOAo=" rel="nofollow noreferrer">Try it!</a></p>
