--- a/q/247835.html
+++ b/q/247835.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>008</td><td>Uiua</td><td>241008T014226Z</td><td><a href="https://codegolf.stackexchange.com/questions/247835/previous-fibonacci-number/275960#275960">noodle p</a></td></tr>
+<tr d-ix="0"><td>007</td><td>Uiua</td><td>241008T014226Z</td><td><a href="https://codegolf.stackexchange.com/questions/247835/previous-fibonacci-number/275960#275960">noodle p</a></td></tr>
 <tr d-ix="1"><td>003</td><td>Vyxal 3</td><td>241008T135247Z</td><td><a href="https://codegolf.stackexchange.com/questions/247835/previous-fibonacci-number/275968#275968">pacman25</a></td></tr>
 <tr d-ix="2"><td>041</td><td>Python 3.8 prerelease</td><td>241007T215348Z</td><td><a href="https://codegolf.stackexchange.com/questions/247835/previous-fibonacci-number/275958#275958">aeh5040</a></td></tr>
 <tr d-ix="3"><td>012</td><td>x8664 assembly</td><td>220526T030603Z</td><td><a href="https://codegolf.stackexchange.com/questions/247835/previous-fibonacci-number/247858#247858">Chris</a></td></tr>
@@ -80,7 +80,13 @@
 <tr d-ix="51"><td>032</td><td>JavaScript</td><td>220525T200912Z</td><td><a href="https://codegolf.stackexchange.com/questions/247835/previous-fibonacci-number/247836#247836">rydwolf</a></td></tr>
 <tr d-ix="52"><td>nan</td><td></td><td>220525T202325Z</td><td><a href="https://codegolf.stackexchange.com/questions/247835/previous-fibonacci-number/247838#247838">Giuseppe</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Uiua, 8 bytes</h1>
+<div id="pu0" class="pu"><h1>Uiua, 7 bytes</h1>
+<pre><code>⍢⤙+⋅≠.1
+</code></pre>
+<p>Try it: <a href="https://uiua.org/pad?src=0_13_0-dev_3__RiDihpAg4o2i4qSZK-KLheKJoC4xCgrin5ziiaFGIFsxIDIgMyA1IDggMTMgMjEgMzQgNTUgODldCuKXjOKXjOKJoSZw4o2aJCJfIC0-IF8i4qyaQFxzwrDii5UK" rel="nofollow noreferrer">Uiua pad</a></p>
+<p>Starting with two ones, repeatedly add them while bringing the second number to the top until the second number is equal to the input. Then, the top number is the previous fibonacci.</p>
+<p>Alternatively, using the method of dividing by the golden ratio:</p>
+<h1>Uiua, 8 bytes</h1>
 <pre><code>⁅÷÷2+1√5
 </code></pre>
 <p>Try it: <a href="https://uiua.org/pad?src=0_13_0-dev_3__RiDihpAg4oGFw7fDtzIrMeKImjUK4qyaQCDiiaEkIl8g4oaSIF8i4qyaQFxzwrDii5Xin5xGIFsyIDMgNSA4IDEzIDIxIDM0IDU1IDg5IDE0NF0K" rel="nofollow noreferrer">Uiua pad</a></p>
