--- a/q/275973.html
+++ b/q/275973.html
@@ -26,17 +26,25 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>055</td><td>Python 3</td><td>241008T214308Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275977#275977">squarero</a></td></tr>
-<tr d-ix="1"><td>019</td><td>Charcoal</td><td>241008T204821Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275976#275976">Neil</a></td></tr>
+<tr d-ix="0"><td>046</td><td>JavaScript ES6</td><td>241008T215928Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275979#275979">Arnauld</a></td></tr>
+<tr d-ix="1"><td>055</td><td>Python 3</td><td>241008T214308Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275977#275977">squarero</a></td></tr>
+<tr d-ix="2"><td>019</td><td>Charcoal</td><td>241008T204821Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275976#275976">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 55 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 46 bytes</h1>
+<p>Expects <code>(numerator)(denominator)</code>. Returns <strong>0</strong> for truthy, or non-zero for falsy.</p>
+
+<pre class="lang-none prettyprint-override"><code>p=&gt;q=&gt;(g=k=&gt;k&amp;&amp;(k^p/(d/=2))&amp;1|g(k/2))(p,d=q*q)
+</code></pre>
+<p><a href="https://tio.run/##bc47DsIwEEXRnmW4sGYQYGxIQTEpWQFdAMnKx4Cj2PmAhMTeDYIGiLun07x70Tfd593ZD/PGFWWoKHhKW0rBkKXUcg726AUUghQilw8DVrwW@FlB7bTFkLumd3W5qJ0Blu2663C6HxhOvr2CJYLEf1whqBFuENYjlMlHf5jtm2yr6z5yJ2N3KoYy1pDEUL4TwhM" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 55 bytes</h1>
 
 <pre class="lang-none prettyprint-override"><code>lambda a,b:bin(a//b)[:1:-1]==f'{a%b:0{len(bin(b))-3}b}'
 </code></pre>
 <p>Takes input like <code>f(numerator, denominator)</code>.</p>
 <p><a href="https://tio.run/##Tc5BCsIwEIXhvacYEGkCaZtp7MJATqIuMmiwUGORbqT07LFVkmb7vYF/hs/4eHkVnLmE3j7pZsEK0tR5Zuua@FmjLvFqjCsmeyAtp/7u2ToT56WaaS7C8O78yByTApBz2IOs5C6iEtD8ECtMeBJw/ONyujG2yZfr6HzbYwCzQJMwz2LMyizbpl9yxRhdfwlf" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 19 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 19 bytes</h1>
 <pre><code>≔↨Ｎ²θ∧⁼θ⮌θ⁼Ｌθ⊗⊖Ｌ↨Ｎ²
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/9@xuDgzPU/DKbE4VcMzr6C0xK80Nym1SENTR8EIiAs1rbkCijLzSjQc81I0XAtLE3OKNQp1FIJSy1KLgFoKNYGKoMI@qXnpJRlAIR0Fl/zSpJzUFA2X1OSi1NzUvBIgGyqN3SYIsP7/31LB5L9uWQ4A" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Takes two integers as input. Explanation:</p>
