--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20241008T215928Z
+"   /golfscore                                      20241008T220257Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
 <a href="q/275973.html">Decide symmetry of fractions                    : 0275973</a>
+<a href="q/958.html">Random dice tipping                             : 0000958</a>
 <a href="q/44333.html">Are these dice nontransitive?                   : 0044333</a>
 <a href="q/247835.html">Previous Fibonacci number                       : 0247835</a>
 <a href="q/275970.html">Shortest realisation of n+C(n)                  : 0275970</a>
